Code cleaned up, old methods placed as comments at the end of each file, to be deleted when the project is finalized. Bug at delete task (Array gets mixed after the user deletes a task from the middle

--- a/app/src/main/res/layout/task_constructor.xml
+++ b/app/src/main/res/layout/task_constructor.xml
@@ -11,13 +11,13 @@
         android:layout_margin="4dp">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/taskIconImageView"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:padding="2dp"/>
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/taskNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -30,7 +30,7 @@
             android:textStyle="bold" />
 
         <ImageView
-            android:id="@+id/image_delete"
+            android:id="@+id/deleteTaskImageView"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentTop="true"
