Created 2 dialog boxes, one with edit text and the other one is empty'

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,8 +88,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/taskManagerBtn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="442dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="424dp"
         android:ems="10"
         android:hint="Minutes"
         android:inputType="number"
